@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180320"
-#define public MagickPackageReleaseDate "snapshot-20180320"
+#define public MagickPackageVersionAddendum ".020180323"
+#define public MagickPackageReleaseDate "snapshot-20180323"
